# MiniShell

./: CMakeLists.txt
MiniShell/src/: InputHandler.cpp
include/: FileFunctions.hpp  InputHandler.hpp  ShellManager.hpp
src/: FileFunctions.cpp  MiniShell_v1.cpp  ShellManager.cpp
